2011-05-20  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	Rename top-level IT_FIND_JAVAC
	to IT_FIND_JAVA_COMPILER.
	* configure.ac:
	Call IT_FIND_JAVA_COMPILER not
	IT_FIND_JAVAC.

2011-05-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(extract-hotspot): Use absolute path when
	creating symbolic link.

2011-05-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(extract): Depend on extract-hotspot and
	sanitise-hotspot.
	(extract-jaxws): Depend on sanitise-openjdk
	rather than extract-openjdk to get the
	complete version.
	(remove-intree-libraries): Likewise.
	(generated): Remove dependencies.  Doesn't
	require anything.
	(patch-fsg): Depend on sanitise-openjdk.
	(icedtea-boot): Depend on generated.

2011-05-20  Andrew John Hughes  <ahughes@redhat.com>

	Ensure all our macros have an IT_ prefix.
	* acinclude.m4:
	(IT_WITH_VERSION_SUFFIX): Renamed from WITH_VERSION_SUFFIX.
	(IT_WITH_PROJECT): Renamed from WITH_PROJECT.
	(IT_WITH_CORBA_SRC_ZIP): Renamed from WITH_CORBA_SRC_ZIP.
	(IT_WITH_JAXP_SRC_ZIP): Renamed from WITH_JAXP_SRC_ZIP.
	(IT_WITH_JAXWS_SRC_ZIP): Renamed from WITH_JAXWS_SRC_ZIP.
	(IT_WITH_JDK_SRC_ZIP): Renamed from WITH_JDK_SRC_ZIP.
	(IT_WITH_LANGTOOLS_SRC_ZIP): Renamed from WITH_LANGTOOLS_SRC_ZIP.
	(IT_ENABLE_HG): Fix dependence of IT_WITH_PROJECT.
	* configure.ac: Use renamed macros throughout.

2011-02-21  Andrew John Hughes  <ahughes@redhat.com>

	Ensure all our macros have an IT_ prefix.
	* acinclude.m4:
	(IT_SET_OS_DIRS): Renamed from SET_OS_DIRS.
	(IT_FIND_JAVAC): Renamed from FIND_JAVAC.
	(IT_FIND_JAVA): Renamed from FIND_JAVA.
	(IT_WITH_OPENJDK_SRC_DIR): Renamed from WITH_OPENJDK_SRC_DIR.
	(IT_FIND_ECJ_JAR): Renamed from FIND_ECJ_JAR.
	(IT_CHECK_GCC_VERSION): Renamed from AC_CHECK_GCC_VERSION.
	(IT_FIND_JAVAH): Renamed from FIND_JAVAH.
	(IT_FIND_JAR): Renamed from FIND_JAR.
	(IT_FIND_RMIC): Renamed from FIND_RMIC.
	(IT_WITH_OPENJDK_SRC_ZIP): Renamed from WITH_OPENJDK_SRC_ZIP.